added show stats in request and response
